--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -1,3 +1,12 @@
-<article>
-  {{{this}}}
-</article>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>{{title}}</title>
+</head>
+<body>
+  <article>
+    {{{content}}}
+  </article>
+</body>
+</html>
