--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -11,7 +11,7 @@
     Navigation
     <ul>
       {{#each posts}}
-        <a href='{{this}}'>{{this}}</a>
+        <a href='{{link}}'>{{link}}</a>
       {{/each}}
     </ul>
   </nav>
